# rsdiff

./: .gitignore  Cargo.toml  benchmark.sh  build.sh  build_darwin.sh  build_linux.sh  build_win.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: benchmark.yml
examples/: index.js  package.json
scripts/: benchmark.sh  build.sh  build_darwin.sh  build_linux.sh  build_win.sh
src/: lib.rs  main.rs
